phaseC/parser.output
State 41 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | %empty

    3 stmts: stmts stmt
    4      | stmt

    5 stmt: expr ';'
    6     | ifstmt
    7     | whilestmt
    8     | for
    9     | returnstmt
   10     | BREAK ';'
   11     | CONTINUE ';'
   12     | block
   13     | funcdef
   14     | ';'

   15 expr: assignexpr
   16     | expr op
   17     | term

   18 op: '+' expr
   19   | '-' expr
   20   | '*' expr
   21   | '/' expr
   22   | '%' expr
   23   | '>' expr
   24   | GREATER_EQUAL expr
   25   | '<' expr
   26   | LESS_EQUAL expr
   27   | NOT_EQUAL expr
   28   | AND expr
   29   | OR expr
   30   | EQUAL_EQUAL expr

   31 term: '(' expr ')'
   32     | '-' expr
   33     | NOT expr
   34     | PLUS_PLUS lvalue
   35     | lvalue PLUS_PLUS
   36     | MINUS_MINUS lvalue
   37     | lvalue MINUS_MINUS
   38     | primary

   39 assignexpr: lvalue '=' expr

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | '(' funcdef ')'
   44        | const

   45 lvalue: ID
   46       | LOCAL ID
   47       | SCOPE ID
   48       | member

   49 member: lvalue '.' ID
   50       | lvalue '[' expr ']'
   51       | call '.' ID
   52       | call '[' expr ']'

   53 call: call '(' elist ')'
   54     | lvalue callsuffix
   55     | '(' funcdef ')' '(' elist ')'

   56 callsuffix: normcall
   57           | methodcall

   58 normcall: '(' elist ')'

   59 methodcall: DOT_DOT ID '(' elist ')'

   60 elist: elist exprs
   61      | expr
   62      | %empty

   63 exprs: ',' expr

   64 objectdef: '[' objectdefs ']'

   65 objectdefs: elist
   66           | indexed

   67 indexed: indexed indexeds
   68        | indexedelem

   69 indexeds: ',' indexedelem

   70 indexedelem: '{' expr ':' expr '}'

   71 $@1: %empty

   72 block: '{' $@1 stmts '}'

   73 $@2: %empty

   74 block: '{' $@2 '}'

   75 funcname: ID
   76         | %empty

   77 funcprefix: FUNCTION funcname

   78 funcargs: '(' idlist ')'

   79 funcbody: block

   80 funcdef: funcprefix funcargs funcbody

   81 const: INTCONST
   82      | REALCONST
   83      | STRING
   84      | NIL
   85      | TRUE
   86      | FALSE

   87 idlist: idlist idlists
   88       | ID
   89       | %empty

   90 idlists: ',' ID

   91 ifprefix: IF '(' expr ')'

   92 elseprefix: ELSE

   93 ifstmt: ifstmt elseprefix stmt
   94       | ifprefix stmt

   95 whilestart: WHILE

   96 whilecond: '(' expr ')'

   97 whilestmt: whilestart whilecond stmt

   98 N: %empty

   99 M: %empty

  100 forprefix: FOR '(' elist ';' M expr ';'

  101 for: forprefix N elist ')' N stmt N

  102 returnstmt: RETURN expr ';'
  103           | RETURN ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 22
'(' (40) 31 43 53 55 58 59 78 91 96 100
')' (41) 31 43 53 55 58 59 78 91 96 101
'*' (42) 20
'+' (43) 18
',' (44) 63 69 90
'-' (45) 19 32
'.' (46) 49 51
'/' (47) 21
':' (58) 70
';' (59) 5 10 11 14 100 102 103
'<' (60) 25
'=' (61) 39
'>' (62) 23
'[' (91) 50 52 64
']' (93) 50 52 64
'{' (123) 70 72 74
'}' (125) 70 72 74
error (256)
ID (258) 45 46 47 49 51 59 75 88 90
INTCONST (259) 81
STRING (260) 83
REALCONST (261) 82
IF (262) 91
ELSE (263) 92
WHILE (264) 95
FOR (265) 100
FUNCTION (266) 77
RETURN (267) 102 103
BREAK (268) 10
CONTINUE (269) 11
NIL (270) 84
LOCAL (271) 46
AND (272) 28
NOT (273) 33
OR (274) 29
TRUE (275) 85
FALSE (276) 86
SCOPE (277) 47
NOT_EQUAL (278) 27
EQUAL_EQUAL (279) 30
DOT_DOT (280) 59
GREATER_EQUAL (281) 24
LESS_EQUAL (282) 26
MINUS_MINUS (283) 36 37
PLUS_PLUS (284) 34 35
UMINUS (285)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
stmts (51)
    on left: 3 4, on right: 1 3 72
stmt (52)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4 93 94 97 101
expr (53)
    on left: 15 16 17, on right: 5 16 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 39 50 52 61 63 70 91 96 100 102
op (54)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30, on right: 16
term (55)
    on left: 31 32 33 34 35 36 37 38, on right: 17
assignexpr (56)
    on left: 39, on right: 15
primary (57)
    on left: 40 41 42 43 44, on right: 38
lvalue (58)
    on left: 45 46 47 48, on right: 34 35 36 37 39 40 49 50 54
member (59)
    on left: 49 50 51 52, on right: 48
call (60)
    on left: 53 54 55, on right: 41 51 52 53
callsuffix (61)
    on left: 56 57, on right: 54
normcall (62)
    on left: 58, on right: 56
methodcall (63)
    on left: 59, on right: 57
elist (64)
    on left: 60 61 62, on right: 53 55 58 59 60 65 100 101
exprs (65)
    on left: 63, on right: 60
objectdef (66)
    on left: 64, on right: 42
objectdefs (67)
    on left: 65 66, on right: 64
indexed (68)
    on left: 67 68, on right: 66 67
indexeds (69)
    on left: 69, on right: 67
indexedelem (70)
    on left: 70, on right: 68 69
block (71)
    on left: 72 74, on right: 12 79
$@1 (72)
    on left: 71, on right: 72
$@2 (73)
    on left: 73, on right: 74
funcname (74)
    on left: 75 76, on right: 77
funcprefix (75)
    on left: 77, on right: 80
funcargs (76)
    on left: 78, on right: 80
funcbody (77)
    on left: 79, on right: 80
funcdef (78)
    on left: 80, on right: 13 43 55
const (79)
    on left: 81 82 83 84 85 86, on right: 44
idlist (80)
    on left: 87 88 89, on right: 78 87
idlists (81)
    on left: 90, on right: 87
ifprefix (82)
    on left: 91, on right: 94
elseprefix (83)
    on left: 92, on right: 93
ifstmt (84)
    on left: 93 94, on right: 6 93
whilestart (85)
    on left: 95, on right: 97
whilecond (86)
    on left: 96, on right: 97
whilestmt (87)
    on left: 97, on right: 7
N (88)
    on left: 98, on right: 101
M (89)
    on left: 99, on right: 100
forprefix (90)
    on left: 100, on right: 101
for (91)
    on left: 101, on right: 8
returnstmt (92)
    on left: 102 103, on right: 9


State 0

    0 $accept: . program $end

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 2 (program)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    for         go to state 45
    returnstmt  go to state 46


State 1

   45 lvalue: ID .

    $default  reduce using rule 45 (lvalue)


State 2

   81 const: INTCONST .

    $default  reduce using rule 81 (const)


State 3

   83 const: STRING .

    $default  reduce using rule 83 (const)


State 4

   82 const: REALCONST .

    $default  reduce using rule 82 (const)


State 5

   91 ifprefix: IF . '(' expr ')'

    '('  shift, and go to state 47


State 6

   95 whilestart: WHILE .

    $default  reduce using rule 95 (whilestart)


State 7

  100 forprefix: FOR . '(' elist ';' M expr ';'

    '('  shift, and go to state 48


State 8

   77 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 49

    $default  reduce using rule 76 (funcname)

    funcname  go to state 50


State 9

  102 returnstmt: RETURN . expr ';'
  103           | RETURN . ';'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 51

    expr        go to state 52
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 10

   10 stmt: BREAK . ';'

    ';'  shift, and go to state 53


State 11

   11 stmt: CONTINUE . ';'

    ';'  shift, and go to state 54


State 12

   84 const: NIL .

    $default  reduce using rule 84 (const)


State 13

   46 lvalue: LOCAL . ID

    ID  shift, and go to state 55


State 14

   33 term: NOT . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 56
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 15

   85 const: TRUE .

    $default  reduce using rule 85 (const)


State 16

   86 const: FALSE .

    $default  reduce using rule 86 (const)


State 17

   47 lvalue: SCOPE . ID

    ID  shift, and go to state 57


State 18

   36 term: MINUS_MINUS . lvalue

    ID     shift, and go to state 1
    LOCAL  shift, and go to state 13
    SCOPE  shift, and go to state 17
    '('    shift, and go to state 58

    lvalue  go to state 59
    member  go to state 33
    call    go to state 60


State 19

   32 term: '-' . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 61
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 20

   34 term: PLUS_PLUS . lvalue

    ID     shift, and go to state 1
    LOCAL  shift, and go to state 13
    SCOPE  shift, and go to state 17
    '('    shift, and go to state 58

    lvalue  go to state 62
    member  go to state 33
    call    go to state 60


State 21

   64 objectdef: '[' . objectdefs ']'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    '{'          shift, and go to state 63

    $default  reduce using rule 62 (elist)

    expr         go to state 64
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 65
    objectdef    go to state 35
    objectdefs   go to state 66
    indexed      go to state 67
    indexedelem  go to state 68
    const        go to state 39


State 22

   31 term: '(' . expr ')'
   43 primary: '(' . funcdef ')'
   55 call: '(' . funcdef ')' '(' elist ')'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    FUNCTION     shift, and go to state 8
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 69
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcprefix  go to state 37
    funcdef     go to state 70
    const       go to state 39


State 23

   14 stmt: ';' .

    $default  reduce using rule 14 (stmt)


State 24

   72 block: '{' . $@1 stmts '}'
   74      | '{' . $@2 '}'

    '}'       reduce using rule 73 ($@2)
    $default  reduce using rule 71 ($@1)

    $@1  go to state 71
    $@2  go to state 72


State 25

    0 $accept: program . $end

    $end  shift, and go to state 73


State 26

    1 program: stmts .
    3 stmts: stmts . stmt

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt        go to state 74
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    for         go to state 45
    returnstmt  go to state 46


State 27

    4 stmts: stmt .

    $default  reduce using rule 4 (stmts)


State 28

    5 stmt: expr . ';'
   16 expr: expr . op

    AND            shift, and go to state 75
    OR             shift, and go to state 76
    NOT_EQUAL      shift, and go to state 77
    EQUAL_EQUAL    shift, and go to state 78
    GREATER_EQUAL  shift, and go to state 79
    LESS_EQUAL     shift, and go to state 80
    '>'            shift, and go to state 81
    '<'            shift, and go to state 82
    '+'            shift, and go to state 83
    '-'            shift, and go to state 84
    '*'            shift, and go to state 85
    '/'            shift, and go to state 86
    '%'            shift, and go to state 87
    ';'            shift, and go to state 88

    op  go to state 89


State 29

   17 expr: term .

    $default  reduce using rule 17 (expr)


State 30

   15 expr: assignexpr .

    $default  reduce using rule 15 (expr)


State 31

   38 term: primary .

    $default  reduce using rule 38 (term)


State 32

   35 term: lvalue . PLUS_PLUS
   37     | lvalue . MINUS_MINUS
   39 assignexpr: lvalue . '=' expr
   40 primary: lvalue .
   49 member: lvalue . '.' ID
   50       | lvalue . '[' expr ']'
   54 call: lvalue . callsuffix

    DOT_DOT      shift, and go to state 90
    MINUS_MINUS  shift, and go to state 91
    '='          shift, and go to state 92
    PLUS_PLUS    shift, and go to state 93
    '.'          shift, and go to state 94
    '['          shift, and go to state 95
    '('          shift, and go to state 96

    $default  reduce using rule 40 (primary)

    callsuffix  go to state 97
    normcall    go to state 98
    methodcall  go to state 99


State 33

   48 lvalue: member .

    $default  reduce using rule 48 (lvalue)


State 34

   41 primary: call .
   51 member: call . '.' ID
   52       | call . '[' expr ']'
   53 call: call . '(' elist ')'

    '.'  shift, and go to state 100
    '['  shift, and go to state 101
    '('  shift, and go to state 102

    $default  reduce using rule 41 (primary)


State 35

   42 primary: objectdef .

    $default  reduce using rule 42 (primary)


State 36

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


State 37

   80 funcdef: funcprefix . funcargs funcbody

    '('  shift, and go to state 103

    funcargs  go to state 104


State 38

   13 stmt: funcdef .

    $default  reduce using rule 13 (stmt)


State 39

   44 primary: const .

    $default  reduce using rule 44 (primary)


State 40

   94 ifstmt: ifprefix . stmt

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    stmt        go to state 105
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    for         go to state 45
    returnstmt  go to state 46


State 41

    6 stmt: ifstmt .
   93 ifstmt: ifstmt . elseprefix stmt

    ELSE  shift, and go to state 106

    ELSE      [reduce using rule 6 (stmt)]
    $default  reduce using rule 6 (stmt)

    elseprefix  go to state 107


State 42

   97 whilestmt: whilestart . whilecond stmt

    '('  shift, and go to state 108

    whilecond  go to state 109


State 43

    7 stmt: whilestmt .

    $default  reduce using rule 7 (stmt)


State 44

  101 for: forprefix . N elist ')' N stmt N

    $default  reduce using rule 98 (N)

    N  go to state 110


State 45

    8 stmt: for .

    $default  reduce using rule 8 (stmt)


State 46

    9 stmt: returnstmt .

    $default  reduce using rule 9 (stmt)


State 47

   91 ifprefix: IF '(' . expr ')'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 111
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 48

  100 forprefix: FOR '(' . elist ';' M expr ';'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    $default  reduce using rule 62 (elist)

    expr        go to state 64
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 112
    objectdef   go to state 35
    const       go to state 39


State 49

   75 funcname: ID .

    $default  reduce using rule 75 (funcname)


State 50

   77 funcprefix: FUNCTION funcname .

    $default  reduce using rule 77 (funcprefix)


State 51

  103 returnstmt: RETURN ';' .

    $default  reduce using rule 103 (returnstmt)


State 52

   16 expr: expr . op
  102 returnstmt: RETURN expr . ';'

    AND            shift, and go to state 75
    OR             shift, and go to state 76
    NOT_EQUAL      shift, and go to state 77
    EQUAL_EQUAL    shift, and go to state 78
    GREATER_EQUAL  shift, and go to state 79
    LESS_EQUAL     shift, and go to state 80
    '>'            shift, and go to state 81
    '<'            shift, and go to state 82
    '+'            shift, and go to state 83
    '-'            shift, and go to state 84
    '*'            shift, and go to state 85
    '/'            shift, and go to state 86
    '%'            shift, and go to state 87
    ';'            shift, and go to state 113

    op  go to state 89


State 53

   10 stmt: BREAK ';' .

    $default  reduce using rule 10 (stmt)


State 54

   11 stmt: CONTINUE ';' .

    $default  reduce using rule 11 (stmt)


State 55

   46 lvalue: LOCAL ID .

    $default  reduce using rule 46 (lvalue)


State 56

   16 expr: expr . op
   33 term: NOT expr .

    $default  reduce using rule 33 (term)

    op  go to state 89


State 57

   47 lvalue: SCOPE ID .

    $default  reduce using rule 47 (lvalue)


State 58

   55 call: '(' . funcdef ')' '(' elist ')'

    FUNCTION  shift, and go to state 8

    funcprefix  go to state 37
    funcdef     go to state 114


State 59

   36 term: MINUS_MINUS lvalue .
   49 member: lvalue . '.' ID
   50       | lvalue . '[' expr ']'
   54 call: lvalue . callsuffix

    DOT_DOT  shift, and go to state 90
    '.'      shift, and go to state 94
    '['      shift, and go to state 95
    '('      shift, and go to state 96

    $default  reduce using rule 36 (term)

    callsuffix  go to state 97
    normcall    go to state 98
    methodcall  go to state 99


State 60

   51 member: call . '.' ID
   52       | call . '[' expr ']'
   53 call: call . '(' elist ')'

    '.'  shift, and go to state 100
    '['  shift, and go to state 101
    '('  shift, and go to state 102


State 61

   16 expr: expr . op
   32 term: '-' expr .

    $default  reduce using rule 32 (term)

    op  go to state 89


State 62

   34 term: PLUS_PLUS lvalue .
   49 member: lvalue . '.' ID
   50       | lvalue . '[' expr ']'
   54 call: lvalue . callsuffix

    DOT_DOT  shift, and go to state 90
    '.'      shift, and go to state 94
    '['      shift, and go to state 95
    '('      shift, and go to state 96

    $default  reduce using rule 34 (term)

    callsuffix  go to state 97
    normcall    go to state 98
    methodcall  go to state 99


State 63

   70 indexedelem: '{' . expr ':' expr '}'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 115
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 64

   16 expr: expr . op
   61 elist: expr .

    AND            shift, and go to state 75
    OR             shift, and go to state 76
    NOT_EQUAL      shift, and go to state 77
    EQUAL_EQUAL    shift, and go to state 78
    GREATER_EQUAL  shift, and go to state 79
    LESS_EQUAL     shift, and go to state 80
    '>'            shift, and go to state 81
    '<'            shift, and go to state 82
    '+'            shift, and go to state 83
    '-'            shift, and go to state 84
    '*'            shift, and go to state 85
    '/'            shift, and go to state 86
    '%'            shift, and go to state 87

    $default  reduce using rule 61 (elist)

    op  go to state 89


State 65

   60 elist: elist . exprs
   65 objectdefs: elist .

    ','  shift, and go to state 116

    $default  reduce using rule 65 (objectdefs)

    exprs  go to state 117


State 66

   64 objectdef: '[' objectdefs . ']'

    ']'  shift, and go to state 118


State 67

   66 objectdefs: indexed .
   67 indexed: indexed . indexeds

    ','  shift, and go to state 119

    $default  reduce using rule 66 (objectdefs)

    indexeds  go to state 120


State 68

   68 indexed: indexedelem .

    $default  reduce using rule 68 (indexed)


State 69

   16 expr: expr . op
   31 term: '(' expr . ')'

    AND            shift, and go to state 75
    OR             shift, and go to state 76
    NOT_EQUAL      shift, and go to state 77
    EQUAL_EQUAL    shift, and go to state 78
    GREATER_EQUAL  shift, and go to state 79
    LESS_EQUAL     shift, and go to state 80
    '>'            shift, and go to state 81
    '<'            shift, and go to state 82
    '+'            shift, and go to state 83
    '-'            shift, and go to state 84
    '*'            shift, and go to state 85
    '/'            shift, and go to state 86
    '%'            shift, and go to state 87
    ')'            shift, and go to state 121

    op  go to state 89


State 70

   43 primary: '(' funcdef . ')'
   55 call: '(' funcdef . ')' '(' elist ')'

    ')'  shift, and go to state 122


State 71

   72 block: '{' $@1 . stmts '}'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    stmts       go to state 123
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    for         go to state 45
    returnstmt  go to state 46


State 72

   74 block: '{' $@2 . '}'

    '}'  shift, and go to state 124


State 73

    0 $accept: program $end .

    $default  accept


State 74

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


State 75

   28 op: AND . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 125
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 76

   29 op: OR . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 126
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 77

   27 op: NOT_EQUAL . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 127
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 78

   30 op: EQUAL_EQUAL . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 128
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 39


State 79

   24 op: GREATER_EQUAL . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
